<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="app.practise.coffeebar.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:src="@drawable/coffee_shop_logo2"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:id="@+id/linearLayout_name">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText_name"
            android:textColor="@color/colorText"
            android:hint="@string/name_hint"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/linearLayout_name"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:id="@+id/linearLayout_toppings">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toppings_label"
            android:textSize="@dimen/text_size"
            android:textColor="@color/colorText"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/inner_margin_vertical"
            android:layout_marginLeft="@dimen/inner_margin_horizontal">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkbox_toppingsWC"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/toppingsWC_label"
                android:textSize="@dimen/text_size"
                android:textColor="@color/colorText"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/inner_margin_horizontal">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkbox_toppingsC"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:text="@string/toppingsC_label"
                android:textColor="@color/colorText"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayout_toppings"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:id="@+id/linearLayout_quantity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity_label"
            android:textSize="@dimen/text_size"
            android:textColor="@color/colorText"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayout_quantity"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/inner_margin_vertical"
        android:id="@+id/linearLayout_quantity2">

        <Button
            android:layout_width="@dimen/inc_dec_button_width"
            android:layout_height="wrap_content"
            android:onClick="onDecrementClick"
            android:text="@string/decrement_button"
            android:textSize="@dimen/inc_dec_text_size"
            android:padding="0dp"
            android:id="@+id/button_decrement"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_quantity"
            android:text="@string/default_quantity"
            android:textSize="@dimen/quantity_text_size"
            android:textStyle="bold"
            android:layout_marginLeft="@dimen/quantity_margin_horizontal"
            android:layout_marginRight="@dimen/quantity_margin_horizontal"
            android:textColor="@color/colorText"/>

        <Button
            android:layout_width="@dimen/inc_dec_button_width"
            android:layout_height="wrap_content"
            android:onClick="onIncrementClick"
            android:text="@string/increment_button"
            android:textSize="@dimen/inc_dec_text_size"
            android:padding="0dp"
            android:id="@+id/button_increment"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/linearLayout_quantity2"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:id="@+id/linearLayout_orderSummary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/orderSummary_label"
            android:textSize="@dimen/text_size"
            android:textColor="@color/colorText"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_orderSummary"
            android:textSize="@dimen/text_size"
            android:text="summary"
            android:layout_marginTop="@dimen/inner_margin_vertical"
            android:layout_marginLeft="@dimen/inner_margin_horizontal"
            android:textColor="@color/colorText"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">
        <Button
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:onClick="onOrderClick"
            android:textAllCaps="false"
            android:text="@string/order_button"
            android:id="@+id/button_order"/>
    </LinearLayout>

</RelativeLayout>
